--- a/EC2/build.gradle
+++ b/EC2/build.gradle
@@ -17,11 +17,18 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+	implementation 'org.springframework.boot:spring-boot-starter-web'
 
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	runtimeOnly 'com.mysql:mysql-connector-j'
+	implementation 'com.squareup.okhttp3:okhttp:4.9.1'
+	//implementation 'org.springframework.boot:spring-boot-starter-security'
+// Swagger 3
+	//implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
 
-	implementation 'org.springframework.boot:spring-boot-starter-web'
+// Spring Security
+	//implementation 'org.springframework.boot:spring-boot-starter-security'
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	implementation 'org.projectlombok:lombok:1.18.22' // version은 Lombok의 최신 버전으로 설정해주세요.
