--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 
+## MySQL
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/test?characterEncoding=UTF-8&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=0000
+spring.jpa.properties.hibernate.format_sql=true
+
+## JPA ??
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
