--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '3.1.3'
+    id 'org.springframework.boot' version '3.1.4'
     id 'io.spring.dependency-management' version '1.1.3'
 }
 
@@ -16,31 +16,49 @@ repositories {
 }
 
 dependencies {
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    implementation 'org.projectlombok:lombok:1.18.28'
+    implementation 'com.squareup.okhttp3:okhttp:4.9.1'
+    implementation 'com.antkorwin:common-utils:1.2'
 
-    // DB 설정
-    runtimeOnly 'com.mysql:mysql-connector-j'
+    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-csv:2.12.0'
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
+    implementation 'org.springframework.security:spring-security-config'
 
-    //install lombok
+    implementation 'org.projectlombok:lombok:1.18.22'
+    annotationProcessor 'org.projectlombok:lombok:1.18.22'
+
     annotationProcessor('org.projectlombok:lombok')
     testAnnotationProcessor('org.projectlombok:lombok')
 
-    // json library
-    implementation 'com.google.code.gson:gson:2.8.7'
-
-    // Spring Security
-    implementation 'org.springframework.boot:spring-boot-starter-security'
-
-    // Swagger 3
-    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
-
-    // excel to json library
-    implementation "org.apache.poi:poi:5.2.0"
-    implementation "org.apache.poi:poi-ooxml:5.2.0"
-    implementation "com.fasterxml.jackson.core:jackson-databind:2.13.1"
-
-    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.jetbrains:annotations:24.0.0'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+    developmentOnly 'org.springframework.boot:spring-boot-devtools'
+
+    implementation 'org.springframework.boot:spring-boot-starter-mail'
+    implementation 'org.springframework:spring-context:6.0.7'
+    implementation 'org.springframework:spring-context-support:6.0.7'
+    implementation 'com.sun.mail:jakarta.mail:2.0.1'
+
+    runtimeOnly 'com.mysql:mysql-connector-j'
+
+    // json library
+    implementation 'com.google.code.gson:gson:2.8.9'
+    implementation "org.apache.poi:poi:5.2.0"
+    implementation "org.apache.poi:poi-ooxml:5.2.0"
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.4.1'
+
+    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+    implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
+    implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
+    implementation "org.springframework.boot:spring-boot-starter-security"
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+}
+
+
+tasks.named('test') {
+    useJUnitPlatform()
 }
