--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,15 +11,22 @@ spring.jpa.show-sql=true
 spring.jpa.open-in-view=false
 spring.jpa.hibernate.ddl-auto=update
 
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://localhost:3306/aws?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+#spring.datasource.url=jdbc:mysql://localhost:3306/test?characterEncoding=UTF-8&serverTimezone=UTC
+#
+#spring.datasource.username=root
+#spring.datasource.password=0000
+
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.datasource.url=jdbc:mysql://localhost:3306/aws?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
-spring.datasource.url=jdbc:mysql://localhost:3306/test?characterEncoding=UTF-8&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://cloud-maestrodb.cfzc8jmpnsan.ap-northeast-2.rds.amazonaws.com:3306/aws
 
-spring.datasource.username=root
-spring.datasource.password=0000
+spring.datasource.username=admin
+spring.datasource.password=cloud0023
 
-spring.security.user.name=root
-spring.security.user.password=0000
+#spring.security.user.name=root
+#spring.security.user.password=0000
 
 spring.mail.host=smtp.naver.com
 spring.mail.port=465
