--- a/build.gradle
+++ b/build.gradle
@@ -51,6 +51,8 @@ dependencies {
     implementation "org.apache.poi:poi-ooxml:5.2.0"
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.4.1'
 
+    implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
+
     implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
     implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
     implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
