--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,18 +13,18 @@ spring.jpa.hibernate.ddl-auto=update
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.datasource.url=jdbc:mysql://localhost:3306/aws?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
-spring.datasource.url=jdbc:mysql://localhost:3306/test?characterEncoding=UTF-8&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3307/cloud?characterEncoding=UTF-8&serverTimezone=UTC
 
 spring.datasource.username=root
-spring.datasource.password=0000
+spring.datasource.password=7979
 
 spring.security.user.name=root
-spring.security.user.password=0000
+spring.security.user.password=1234
 
 spring.mail.host=smtp.naver.com
 spring.mail.port=465
 spring.mail.username=hellokms8828@naver.com
-spring.mail.password=myhobby119
+spring.mail.password=myhobby119@
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.ssl.enable=true
 spring.mail.properties.mail.smtp.ssl.trust=smtp.naver.com
