--- a/.gitignore
+++ b/.gitignore
@@ -251,4 +251,8 @@ gradle-app.setting
 # Java heap dump
 *.hprof
 
+
+### application properties
+
+
 # End of https://www.toptal.com/developers/gitignore/api/windows,gradle,intellij,java,intellij+all
