--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,6 @@ jobs:
         java-version: '17'
         distribution: 'corretto'
      - name: Grant execute permission for gradlew
-       run: chmod +x gradlew
+       run: chmod +x gradle
      - name: Build with Gradle
-       run: ./gradlew clean build
+       run: ./gradle clean build
