--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,8 +5,6 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
-env:
-  S3_BUCKET_NAME: cloud-maestro-s3
 jobs:
   build-with-gradle:
     runs-on: ubuntu-latest
@@ -17,6 +15,6 @@ jobs:
         java-version: '17'
         distribution: 'corretto'
      - name: Grant execute permission for gradlew
-       run: chmod +x gradle
+       run: chmod +x gradlew
      - name: Build with Gradle
-       run: ./gradle clean build
+       run: ./gradlew clean build
