--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,8 +13,8 @@ jobs:
        uses: actions/setup-java@v3
        with:
         java-version: '17'
-        distribution: 'temurin'
+        distribution: 'corretto'
      - name: Grant execute permission for gradlew
-       run: chmod +x gradlew
+       run: chmod +x ./gradlew
      - name: Build with Gradle
        run: ./gradlew clean build
