--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,16 +5,23 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
+
+
 jobs:
-  build-with-gradle:
+  build:
+
     runs-on: ubuntu-latest
+
     steps:
-     - name: JDK 17 install
-       uses: actions/setup-java@v3
-       with:
+    
+    - name: Set up JDK 11
+      uses: actions/setup-java@v3
+      with:
         java-version: '17'
         distribution: 'corretto'
-     - name: Grant execute permission for gradlew
-       run: chmod +x ./gradlew
-     - name: Build with Gradle
-       run: ./gradlew clean build
+        
+    - name: Grant execute permission for gradlew
+      run: chmod +x gradlew
+    
+    - name: Build with Gradle
+      run: ./gradlew clean build
