--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,10 +54,10 @@ jobs:
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      run: |
-        aws deploy create-deployment\
-        --application-name CloudMaestro\
-        --deployment-group-name CloudMaestro-group\
-        --file-exists-behavior OVERWRITE\
-        --s3-location bucket=cloud-maestro-s3,bundleType=zip,key=CloudMaestro_Backend.zip\ 
+      run: 
+        aws deploy create-deployment
+        --application-name CloudMaestro
+        --deployment-group-name CloudMaestro-group
+        --file-exists-behavior OVERWRITE
+        --s3-location bucket=cloud-maestro-s3,bundleType=zip,key=CloudMaestro_Backend.zip 
         --region ap-northeast-2
