--- a/appspec.yml
+++ b/appspec.yml
@@ -1,18 +1,15 @@
 version: 0.0
 os: linux
+
 files:
   - source: /
-    destination: /home/ubuntu/app/
-    overwrite: yes
-
+    destination: /home/ubuntu/moduform
 permissions:
-  - object: /
-    pattern: "**"
+  - object: /home/ubuntu/moduform/
     owner: ubuntu
     group: ubuntu
-
 hooks:
-  ApplicationStart:
+  AfterInstall:
     - location: scripts/deploy.sh
       timeout: 60
       runas: ubuntu
