--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,9 @@ on:
     branches: [ main ]
 env:
   S3_BUCKET_NAME: cloud-maestro-s3
+  CODE_DEPLOY_APP_NAME: CloudMaestro
+  CODE_DEPLOY_GROUP_NAME: CloudMaestro-group
+  PROJECT_NAME: CloudMaestro_Backend
 
 jobs:
   build:
@@ -54,10 +57,4 @@ jobs:
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      run: 
-        aws deploy create-deployment
-        --application-name CloudMaestro
-        --deployment-group-name CloudMaestro-group
-        --file-exists-behavior OVERWRITE
-        --s3-location bucket=cloud-maestro-s3,bundleType=zip,key=CloudMaestro_Backend.zip 
-        --region ap-northeast-2
+      run: aws deploy create-deployment --application-name $CODE_DEPLOY_APP_NAME --deployment-config-name CodeDeployDefault.AllAtOnce --deployment-group-name $CODE_DEPLOY_GROUP_NAME --s3-location bucket=$S3_BUCKET_NAME,bundleType=zip,key=$PROJECT_NAME.zip
