--- a/appspec.yml
+++ b/appspec.yml
@@ -10,6 +10,9 @@ permissions:
     group: ubuntu
 hooks:
   AfterInstall:
-    - location: scripts/deploy.sh
+    - location: scripts/stop.sh
       timeout: 60
-      runas: ubuntu
+  ApplicationStart:
+    - location: scripts/start.sh
+      timeout: 60
+
