--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,69 +1,69 @@
-name: CloudMaestro Backend CI/CD
+# name: CloudMaestro Backend CI/CD
 
-on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
-env:
-  S3_BUCKET_NAME: cloud-maestro-s3
-  CODE_DEPLOY_APP_NAME: CloudMaestro
-  CODE_DEPLOY_GROUP_NAME: CloudMaestro-group
-  PROJECT_NAME: CloudMaestro_Backend
+# on:
+#   push:
+#     branches: [ main ]
+#   pull_request:
+#     branches: [ main ]
+# env:
+#   S3_BUCKET_NAME: cloud-maestro-s3
+#   CODE_DEPLOY_APP_NAME: CloudMaestro
+#   CODE_DEPLOY_GROUP_NAME: CloudMaestro-group
+#   PROJECT_NAME: CloudMaestro_Backend
 
-jobs:
-  build:
+# jobs:
+#   build:
 
-    runs-on: ubuntu-latest
+#     runs-on: ubuntu-latest
 
-    steps:
-    - uses: actions/checkout@v2
-    - name: Set up JDK 17
-      uses: actions/setup-java@v3
-      with:
-        java-version: '17'
-        distribution: 'corretto'
+#     steps:
+#     - uses: actions/checkout@v2
+#     - name: Set up JDK 17
+#       uses: actions/setup-java@v3
+#       with:
+#         java-version: '17'
+#         distribution: 'corretto'
         
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
+#     - name: Grant execute permission for gradlew
+#       run: chmod +x gradlew
     
-    - name: Build with Gradle
-      run: ./gradlew clean build
+#     - name: Build with Gradle
+#       run: ./gradlew clean build
 
-       # 디렉토리 생성
-    - name: Make Directory
-      run: mkdir -p deploy
+#        # 디렉토리 생성
+#     - name: Make Directory
+#       run: mkdir -p deploy
         
-    # Jar 파일 복사
-    - name: Copy Jar
-      run: cp ./build/libs/*.jar ./deploy
+#     # Jar 파일 복사
+#     - name: Copy Jar
+#       run: cp ./build/libs/*.jar ./deploy
 
-    - name: Make zip file
-      run: zip -r ./$GITHUB_SHA.zip ./deploy
-      shell: bash
+#     - name: Make zip file
+#       run: zip -r ./$GITHUB_SHA.zip ./deploy
+#       shell: bash
 
-    - name: Configure AWS credentials
-      uses: aws-actions/configure-aws-credentials@v1
-      with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: ap-northeast-2
+#     - name: Configure AWS credentials
+#       uses: aws-actions/configure-aws-credentials@v1
+#       with:
+#         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+#         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+#         aws-region: ap-northeast-2
 
-    - name: Upload to S3
-      run: aws s3 cp --region ap-northeast-2 ./CloudMaestro_Backend.zip s3://$S3_BUCKET_NAME/$GITHUB_SHA.zip
+#     - name: Upload to S3
+#       run: aws s3 cp --region ap-northeast-2 ./CloudMaestro_Backend.zip s3://$S3_BUCKET_NAME/$GITHUB_SHA.zip
     
-     # Deploy
-    - name: Deploy
-      env:
-        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+#      # Deploy
+#     - name: Deploy
+#       env:
+#         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+#         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
-      run: |
-        aws deploy create-deployment \
-        --application-name CloudMaestro \
-        --deployment-config-name CodeDeployDefault.AllAtOnce \
-        --deployment-group-name CloudMaestro-group \
-        --file-exists-behavior OVERWRITE \
-        --s3-location bucket=cloud-maestro-s3,bundleType=zip,key=$GITHUB_SHA.zip \
-        --region ap-northeast-2 \
+#       run: |
+#         aws deploy create-deployment \
+#         --application-name CloudMaestro \
+#         --deployment-config-name CodeDeployDefault.AllAtOnce \
+#         --deployment-group-name CloudMaestro-group \
+#         --file-exists-behavior OVERWRITE \
+#         --s3-location bucket=cloud-maestro-s3,bundleType=zip,key=$GITHUB_SHA.zip \
+#         --region ap-northeast-2 \
    
