--- a/appspec.yml
+++ b/appspec.yml
@@ -11,9 +11,7 @@ permissions:
     mode: 755
 hooks:
   AfterInstall:
-    - location: scripts/stop.sh
+    - location: deploy.sh
       timeout: 60
-  ApplicationStart:
-    - location: scripts/start.sh
-      timeout: 60
+      runas: root
 
