--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,4 @@
 name: CloudMaestro Backend CI/CD
-
 on:
   push:
     branches: [ main ]
@@ -7,15 +6,9 @@ on:
     branches: [ main ]
 env:
   S3_BUCKET_NAME: cloud-maestro-s3
-  CODE_DEPLOY_APP_NAME: CloudMaestro
-  CODE_DEPLOY_GROUP_NAME: CloudMaestro-group
-  PROJECT_NAME: CloudMaestro_Backend
-
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v2
     - name: Set up JDK 17
@@ -29,7 +22,6 @@ jobs:
     
     - name: Build with Gradle
       run: ./gradlew clean build
-
        # 디렉토리 생성
     - name: Make Directory
       run: mkdir -p deploy
@@ -37,33 +29,21 @@ jobs:
     # Jar 파일 복사
     - name: Copy Jar
       run: cp ./build/libs/*.jar ./deploy
-
     - name: Make zip file
-      run: zip -r ./$GITHUB_SHA.zip ./deploy
+      run: zip -r ./CloudMaestro_Backend.zip ./deploy
       shell: bash
-
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: ap-northeast-2
-
     - name: Upload to S3
-      run: aws s3 cp --region ap-northeast-2 ./$GITHUB_SHA.zip s3://$S3_BUCKET_NAME/$GITHUB_SHA.zip
-    
+      run: aws s3 cp --region ap-northeast-2 ./CloudMaestro_Backend.zip s3://$S3_BUCKET_NAME/
      # Deploy
     - name: Deploy
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-
       run: |
-        aws deploy create-deployment \
-        --application-name CloudMaestro \
-        --deployment-config-name CodeDeployDefault.AllAtOnce \
-        --deployment-group-name CloudMaestro-group \
-        --file-exists-behavior OVERWRITE \
-        --s3-location bucket=cloud-maestro-s3,bundleType=zip,key=$GITHUB_SHA.zip \
-        --region ap-northeast-2 \
-   
+        aws deploy create-deployment --application-name CloudMaestro-back --deployment-group-name CloudMaestro-back-group --deployment-config-name CodeDeployDefault.AllAtOnce --file-exists-behavior OVERWRITE --s3-location bucket=cloud-maestro-s3,bundleType=zip,key=CloudMaestro_Backend.zip
