--- a/appspec.yml
+++ b/appspec.yml
@@ -5,13 +5,12 @@ files:
   - source: /
     destination: /home/ubuntu/app
 permissions:
-  - object: /home/ubuntu/app
+  - object: /home/ubuntu/app/
     owner: ubuntu
     group: ubuntu
-    mode: 755
 hooks:
   AfterInstall:
     - location: deploy.sh
       timeout: 60
-      runas: root
+      runas: ubuntu
 
