--- a/appspec.yml
+++ b/appspec.yml
@@ -2,15 +2,18 @@ version: 0.0
 os: linux
 
 files:
-  - source: /
+  - source:  /
     destination: /home/ubuntu/app
+    overwrite: yes
+
 permissions:
-  - object: /home/ubuntu/app/
+  - object: /
+    pattern: "**"
     owner: ubuntu
     group: ubuntu
+
 hooks:
   AfterInstall:
-    - location: deploy.sh
+    - location: scripts/deploy.sh
       timeout: 60
       runas: ubuntu
-
