--- a/appspec.yml
+++ b/appspec.yml
@@ -17,3 +17,7 @@ hooks:
     - location: deploy.sh
       timeout: 60
       runas: root
+  BeforeInstall:
+    - location: scripts/stop.sh
+      timeout: 60
+      runas: root
