--- a/appspec.yml
+++ b/appspec.yml
@@ -16,8 +16,4 @@ hooks:
   AfterInstall:
     - location: deploy.sh
       timeout: 60
-      runas: root
-  BeforeInstall:
-    - location: scripts/stop.sh
-      timeout: 60
-      runas: root
+      runas: ubuntu
