--- a/.github/workflows/main3.yml
+++ b/.github/workflows/main3.yml
@@ -56,12 +56,8 @@ jobs:
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      run: |
-        aws deploy create-deployment \
-        --application-name CloudMaestro \
-        --deployment-group-name CloudMaestro-group \
-        --file-exists-behavior OVERWRITE \
-        --s3-location bucket=cloud-maestro-s3,bundleType=zip,key=coinTalk.zip \ 
-        --region ap-northeast-2
+      run:
+       aws deploy create-deployment --application-name CloudMaestro-back --deployment-group-name CloudMaestro-back-group --deployment-config-name CodeDeployDefault.AllAtOnce --file-exists-behavior OVERWRITE --s3-location bucket=cloud-maestro-s3,bundleType=zip,key=coinTalk.zip
+       
 
     
