--- a/.github/workflows/main2.yml
+++ b/.github/workflows/main2.yml
@@ -5,7 +5,7 @@ on:
   pull_request:
     branches: [ main ]
 env:
-  S3_BUCKET_NAME: cloud-maestro-s3
+  S3_BUCKET_NAME: cloudmaestro-front
 jobs:
   build:
     runs-on: ubuntu-latest
