--- a/appspec.yml
+++ b/appspec.yml
@@ -3,11 +3,13 @@ os: linux
 files:
   - source:  /      
     destination: /home/ubuntu/build/  
+    overwrite: yes
 permissions:   
   - object: /
     pattern: "**"
     owner: ubuntu
     group: ubuntu
+    mode: 755
 
 hooks:
   AfterInstall:     
