--- a/.github/workflows/main2.yml
+++ b/.github/workflows/main2.yml
@@ -23,15 +23,10 @@ jobs:
     - name: Build with Gradle
       run: ./gradlew clean build
        # 디렉토리 생성
-    - name: Make Directory
-      run: mkdir -p deploy
-        
-    # Jar 파일 복사
-    - name: Copy Jar
-      run: cp ./build/libs/*.jar ./deploy
     - name: Make zip file
-      run: zip -r ./CloudMaestro_Backend.zip ./deploy
+      run: zip -r ./CloudMaestro_Backend.zip .
       shell: bash
+      
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
