--- a/.github/workflows/main3.yml
+++ b/.github/workflows/main3.yml
@@ -35,9 +35,22 @@ jobs:
         
     # Jar 파일 복사
     - name: Copy Jar
+      run: cp ./build/libs/*.jar . # 디렉토리 생성
+    - name: Make Directory
+      run: mkdir -p deploy
+        
+    # Jar 파일 복사
+    - name: Copy Jar
       run: cp ./build/libs/*.jar .
+      
+    # appspec.yml 파일 복사
+    - name: Copy appspec.yml
+      run: cp appspec.yml .
 
-
+    # script files 복사
+    - name: Copy script
+      run: cp ./scripts/*.sh .
+    
     - name: Make zip file
       run: zip -r ./coinTalk.zip . 
       shell: bash
