--- a/.github/workflows/main2.yml
+++ b/.github/workflows/main2.yml
@@ -6,6 +6,7 @@ on:
     branches: [ main ]
 env:
   S3_BUCKET_NAME: cloud-maestro-s3
+  PROJECT_NAME: CloudMaestro
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -23,8 +24,8 @@ jobs:
     - name: Build with Gradle
       run: ./gradlew clean build
        # 디렉토리 생성
-    - name: Make zip file
-      run: zip -r ./CloudMaestro_Backend.zip .
+    - name: Make Zip File
+      run: zip -qq -r ./$GITHUB_SHA.zip .
       shell: bash
       
     - name: Configure AWS credentials
@@ -34,11 +35,11 @@ jobs:
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: ap-northeast-2
     - name: Upload to S3
-      run: aws s3 cp --region ap-northeast-2 ./CloudMaestro_Backend.zip s3://$S3_BUCKET_NAME/CloudMaestro_Backend.zip
+      run: aws s3 cp --region ap-northeast-2 ./$GITHUB_SHA.zip s3://$S3_BUCKET_NAME/$PROJECT_NAME/$GITHUB_SHA.zip
      # Deploy
     - name: Deploy
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       run: |
-        aws deploy create-deployment --application-name CloudMaestro-back --deployment-config-name CodeDeployDefault.AllAtOnce --deployment-group-name CloudMaestro-back-group --s3-location bucket=$S3_BUCKET_NAME,key=CloudMaestro_Backend.zip,bundleType=zip
+        aws deploy create-deployment --application-name CloudMaestro-back --deployment-config-name CodeDeployDefault.AllAtOnce --deployment-group-name CloudMaestro-back-group --s3-location bucket=$S3_BUCKET_NAME,key=$PROJECT_NAME/$GITHUB_SHA.zip,bundleType=zip
