--- a/.github/workflows/main3.yml
+++ b/.github/workflows/main3.yml
@@ -29,13 +29,7 @@ jobs:
     - name: Build with Gradle
       run: ./gradlew clean build
 
-     # 디렉토리 생성
-    - name: Make Directory
-      run: mkdir -p deploy
-        
-    # Jar 파일 복사
-    - name: Copy Jar
-      run: cp ./build/libs/*.jar . # 디렉토리 생성
+   # 디렉토리 생성
     - name: Make Directory
       run: mkdir -p deploy
         
@@ -47,13 +41,24 @@ jobs:
     - name: Copy appspec.yml
       run: cp appspec.yml ./deploy
 
+
     # script files 복사
     - name: Copy script
       run: cp ./scripts/*.sh ./deploy
-    
+
     - name: Make zip file
       run: zip -r ./coinTalk.zip ./deploy
       shell: bash
+
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: ap-northeast-2
+
+    - name: Upload to S3
+      run: aws s3 cp --region ap-northeast-2 ./coinTalk.zip s3://$S3_BUCKET_NAME/
 
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
