--- a/.github/workflows/main3.yml
+++ b/.github/workflows/main3.yml
@@ -29,25 +29,13 @@ jobs:
     - name: Build with Gradle
       run: ./gradlew clean build
 
-   # 디렉토리 생성
-    - name: Make Directory
-      run: mkdir -p deploy
-        
+
     # Jar 파일 복사
     - name: Copy Jar
-      run: cp ./build/libs/*.jar ./deploy
-      
-    # appspec.yml 파일 복사
-    - name: Copy appspec.yml
-      run: cp appspec.yml ./deploy
-
-
-    # script files 복사
-    - name: Copy script
-      run: cp ./scripts/deploy.sh ./deploy
+      run: cp ./build/libs/*.jar .
 
     - name: Make Zip File
-      run: zip -qq -r ./$GITHUB_SHA.zip ./deploy
+      run: zip -qq -r ./coinTalk.zip .
       shell: bash
 
     - name: Configure AWS credentials
