--- a/.github/workflows/main3.yml
+++ b/.github/workflows/main3.yml
@@ -1,4 +1,4 @@
-name: coinTalk chatRoom server CI/CD
+name: CloudMaestro server CI/CD
 
 on:
   push:
@@ -35,7 +35,7 @@ jobs:
       run: cp ./build/libs/*.jar .
 
     - name: Make Zip File
-      run: zip -qq -r ./coinTalk.zip .
+      run: zip -qq -r ./CloudMaestro.zip .
       shell: bash
 
     - name: Configure AWS credentials
@@ -46,7 +46,7 @@ jobs:
         aws-region: ap-northeast-2
 
     - name: Upload to S3
-      run: aws s3 cp --region ap-northeast-2 ./coinTalk.zip s3://$S3_BUCKET_NAME/
+      run: aws s3 cp --region ap-northeast-2 ./CloudMaestro.zip s3://$S3_BUCKET_NAME/
 
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
@@ -56,7 +56,7 @@ jobs:
         aws-region: ap-northeast-2
 
     - name: Upload to S3
-      run: aws s3 cp --region ap-northeast-2 ./coinTalk.zip s3://$S3_BUCKET_NAME/
+      run: aws s3 cp --region ap-northeast-2 ./CloudMaestro.zip s3://$S3_BUCKET_NAME/
 
     # Deploy
     - name: Deploy
@@ -64,7 +64,7 @@ jobs:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       run:
-       aws deploy create-deployment --application-name CloudMaestro --deployment-group-name CloudMaestro-group --deployment-config-name CodeDeployDefault.AllAtOnce --file-exists-behavior OVERWRITE --s3-location bucket=cloud-maestro-s3,bundleType=zip,key=coinTalk.zip
+       aws deploy create-deployment --application-name CloudMaestro --deployment-group-name CloudMaestro-group --deployment-config-name CodeDeployDefault.AllAtOnce --file-exists-behavior OVERWRITE --s3-location bucket=cloud-maestro-s3,bundleType=zip,key=CloudMaestro.zip
        
 
     
