--- a/appspec.yml
+++ b/appspec.yml
@@ -12,7 +12,11 @@ permissions:
     mode: 755
 
 hooks:
-  AfterInstall:     
-    - location: scripts/deploy.sh   
-      timeout: 60           
-      runas: ubuntu
+  AfterInstall:
+    - location: scripts/stop.sh
+      timeout: 60
+      runas: ec2-user
+  ApplicationStart:
+    - location: scripts/start.sh
+      timeout: 60
+      runas: ec2-user
