--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -60,3 +60,10 @@ spring.jwt.token.refresh-expiration-time=604800000
 
 
 logging.level.org.springframework.security=DEBUG
+
+# S3 ??
+cloud.aws.stack.auto=false
+cloud.aws.region.static=ap-northeast-2
+cloud.aws.credentials.access-key= AKIAQ4MLWFLEUQJXKHNC
+cloud.aws.credentials.secret-key= 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
+cloud.aws.s3.bucket= arn:aws:s3:::totalstorage-bucket
