--- a/.github/workflows/main2.yml
+++ b/.github/workflows/main2.yml
@@ -1,47 +1,47 @@
-name: CloudMaestro Backend CI/CD
-on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
-env:
-  S3_BUCKET_NAME: cloud-maestro-s3
-  PROJECT_NAME: CloudMaestro
-jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v2
-    - name: Set up JDK 17
-      uses: actions/setup-java@v3
-      with:
-        java-version: '17'
-        distribution: 'corretto'
+# name: CloudMaestro Backend CI/CD
+# on:
+#   push:
+#     branches: [ main ]
+#   pull_request:
+#     branches: [ main ]
+# env:
+#   S3_BUCKET_NAME: cloud-maestro-s3
+#   PROJECT_NAME: CloudMaestro
+# jobs:
+#   build:
+#     runs-on: ubuntu-latest
+#     steps:
+#     - uses: actions/checkout@v2
+#     - name: Set up JDK 17
+#       uses: actions/setup-java@v3
+#       with:
+#         java-version: '17'
+#         distribution: 'corretto'
         
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
+#     - name: Grant execute permission for gradlew
+#       run: chmod +x gradlew
     
-    - name: Build with Gradle
-      run: ./gradlew clean build
-    - name: Copy Jar
-      run: cp ./build/libs/*.jar .
+#     - name: Build with Gradle
+#       run: ./gradlew clean build
+#     - name: Copy Jar
+#       run: cp ./build/libs/*.jar .
 
-    - name: Make Zip File
-      run: zip -qq -r ./CloudMaestro.zip .
-      shell: bash
+#     - name: Make Zip File
+#       run: zip -qq -r ./CloudMaestro.zip .
+#       shell: bash
       
-    - name: Configure AWS credentials
-      uses: aws-actions/configure-aws-credentials@v1
-      with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: ap-northeast-2
-    - name: Upload to S3
-      run: aws s3 cp --region ap-northeast-2 ./CloudMaestro.zip s3://$S3_BUCKET_NAME/CloudMaestro.zip
-     # Deploy
-    - name: Deploy
-      env:
-        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      run: |
-        aws deploy create-deployment --application-name CloudMaestro-back --deployment-config-name CodeDeployDefault.AllAtOnce --deployment-group-name CloudMaestro-back-group --s3-location bucket=$S3_BUCKET_NAME,key=CloudMaestro.zip,bundleType=zip
+#     - name: Configure AWS credentials
+#       uses: aws-actions/configure-aws-credentials@v1
+#       with:
+#         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+#         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+#         aws-region: ap-northeast-2
+#     - name: Upload to S3
+#       run: aws s3 cp --region ap-northeast-2 ./CloudMaestro.zip s3://$S3_BUCKET_NAME/CloudMaestro.zip
+#      # Deploy
+#     - name: Deploy
+#       env:
+#         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+#         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+#       run: |
+#         aws deploy create-deployment --application-name CloudMaestro-back --deployment-config-name CodeDeployDefault.AllAtOnce --deployment-group-name CloudMaestro-back-group --s3-location bucket=$S3_BUCKET_NAME,key=CloudMaestro.zip,bundleType=zip
