--- a/.github/workflows/main3.yml
+++ b/.github/workflows/main3.yml
@@ -1,60 +1,60 @@
-name: CloudMaestro server CI/CD
+# name: CloudMaestro server CI/CD
 
-on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+# on:
+#   push:
+#     branches: [ main ]
+#   pull_request:
+#     branches: [ main ]
 
-env:
-  S3_BUCKET_NAME: cloud-maestro-s3
+# env:
+#   S3_BUCKET_NAME: cloud-maestro-s3
 
-jobs:
-  build:
+# jobs:
+#   build:
 
-    runs-on: ubuntu-latest
+#     runs-on: ubuntu-latest
 
-    steps:
-    - uses: actions/checkout@v2
+#     steps:
+#     - uses: actions/checkout@v2
     
-    - name: Set up JDK 17
-      uses: actions/setup-java@v2
-      with:
-        java-version: '17'
-        distribution: 'temurin'
+#     - name: Set up JDK 17
+#       uses: actions/setup-java@v2
+#       with:
+#         java-version: '17'
+#         distribution: 'temurin'
         
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
+#     - name: Grant execute permission for gradlew
+#       run: chmod +x gradlew
     
-    - name: Build with Gradle
-      run: ./gradlew clean build
+#     - name: Build with Gradle
+#       run: ./gradlew clean build
 
 
-    # Jar 파일 복사
-    - name: Copy Jar
-      run: cp ./build/libs/*.jar .
+#     # Jar 파일 복사
+#     - name: Copy Jar
+#       run: cp ./build/libs/*.jar .
 
-    - name: Make Zip File
-      run: zip -qq -r ./Cloud.zip .
-      shell: bash
+#     - name: Make Zip File
+#       run: zip -qq -r ./Cloud.zip .
+#       shell: bash
 
-    - name: Configure AWS credentials
-      uses: aws-actions/configure-aws-credentials@v1
-      with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: ap-northeast-2
+#     - name: Configure AWS credentials
+#       uses: aws-actions/configure-aws-credentials@v1
+#       with:
+#         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+#         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+#         aws-region: ap-northeast-2
 
-    - name: Upload to S3
-      run: aws s3 cp --region ap-northeast-2 ./Cloud.zip s3://$S3_BUCKET_NAME/
+#     - name: Upload to S3
+#       run: aws s3 cp --region ap-northeast-2 ./Cloud.zip s3://$S3_BUCKET_NAME/
 
-    # Deploy
-    - name: Deploy
-      env:
-        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      run:
-       aws deploy create-deployment --application-name CloudMaestro --deployment-group-name CloudMaestro-group --deployment-config-name CodeDeployDefault.AllAtOnce --file-exists-behavior OVERWRITE --s3-location bucket=cloud-maestro-s3,bundleType=zip,key=Cloud.zip
+#     # Deploy
+#     - name: Deploy
+#       env:
+#         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+#         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+#       run:
+#        aws deploy create-deployment --application-name CloudMaestro --deployment-group-name CloudMaestro-group --deployment-config-name CodeDeployDefault.AllAtOnce --file-exists-behavior OVERWRITE --s3-location bucket=cloud-maestro-s3,bundleType=zip,key=Cloud.zip
        
 
     
