--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -71,7 +71,7 @@ spring.mail.properties.mail.smtp.ssl.trust=smtp.naver.com
 spring.redis.host=localhost
 spring.redis.port=6379
 
-server.port=443
+//server.port=443
 server.ssl.key-store=classpath:SSL/cloudmaestrobackssl.p12
 server.ssl.key-store-type=PKCS12
 server.ssl.key-store-password=Gae4coon0!
