Fix: Bp error resolve

--- a/build.gradle
+++ b/build.gradle
@@ -65,3 +65,7 @@ dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
 
 }
+
+bootJar {
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+}
