--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -62,8 +62,8 @@ spring.security.user.password=1234
 
 spring.mail.host=smtp.naver.com
 spring.mail.port=465
-spring.mail.username=hellokms8828@naver.com
-spring.mail.password=myhobby119@
+spring.mail.username=${NAVER_ID}
+spring.mail.password=${NAVER_PW}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.ssl.enable=true
 spring.mail.properties.mail.smtp.ssl.trust=smtp.naver.com
